--- a/contrato-prestacao-repository/contrato-prestacao-repository.csproj
+++ b/contrato-prestacao-repository/contrato-prestacao-repository.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>contrato_prestacao_repository</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\contrato-prestacao-models\contrato-prestacao-models.csproj" />
+  </ItemGroup>
+
 </Project>
