--- a/contrato-prestacao-api/contrato-prestacao-api.csproj
+++ b/contrato-prestacao-api/contrato-prestacao-api.csproj
@@ -6,8 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\contrato-prestacao-repository\contrato-prestacao-repository.csproj" />
   </ItemGroup>
 
 
