--- a/contrato-prestacao-models/contrato-prestacao-models.csproj
+++ b/contrato-prestacao-models/contrato-prestacao-models.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>contrato_prestacao_models</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.7" />
+  </ItemGroup>
+
 </Project>
